Class vidoes updated

--- a/index.html
+++ b/index.html
@@ -242,45 +242,40 @@
                                         <ul class="list-disc pl-5 dark:text-gray-400 text-gray-500">
                                             <li><a href="https://youtu.be/3h0DjT6ebwk" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    01</a></li>
-                                            <li><a href="https://youtu.be/oGC2JCgsxcA" rel="nofollow" target="_blank"
+                                                    01</a> , <a href="https://youtu.be/oGC2JCgsxcA" rel="nofollow"
+                                                    target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    02</a></li>
-                                            <li><a href="https://youtu.be/PUgusBtAxsI" target="_blank"
+                                                    02</a> , <a href="https://youtu.be/PUgusBtAxsI" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    03</a></li>
-                                            <li><a href="https://youtu.be/txAk68Qw4PQ" rel="nofollow" target="_blank"
+                                                    03</a> , <a href="https://youtu.be/txAk68Qw4PQ" rel="nofollow"
+                                                    target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    04</a></li>
-                                            <li><a href="https://youtu.be/bWzuozTEGUE" target="_blank"
+                                                    04</a> , <a href="https://youtu.be/bWzuozTEGUE" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    05</a></li>
-                                            <li><a href="https://youtu.be/vqKTAvChLAI" rel="nofollow" target="_blank"
+                                                    05</a> , <a href="https://youtu.be/vqKTAvChLAI" rel="nofollow"
+                                                    target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    06</a></li>
-                                            <li><a href="https://youtu.be/43kKHIV4uss" target="_blank"
+                                                    06</a> , <a href="https://youtu.be/43kKHIV4uss" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">CLass
-                                                    07</a></li>
-                                            <li><a href="https://youtu.be/FbfoVOGalIo" rel="nofollow" target="_blank"
+                                                    07</a> , <a href="https://youtu.be/FbfoVOGalIo" rel="nofollow"
+                                                    target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    08</a></li>
-                                            <li><a href="https://youtu.be/P4EHvEmd2i8" target="_blank"
+                                                    08</a> , <a href="https://youtu.be/P4EHvEmd2i8" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     09</a></li>
                                             <li><a href="https://youtu.be/w7MLJKQ6Vo0" rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    10 (Part 01)</a></li>
-                                            <li><a href="https://youtu.be/NnWRy4QPRyE" target="_blank"
+                                                    10 (Part 01)</a> , <a href="https://youtu.be/NnWRy4QPRyE"
+                                                    target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     10 (Part 02)</a></li>
                                             <li><a href="https://youtu.be/RSbhh4EMUBU" rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    11</a></li>
-                                            <li><a href="https://youtu.be/1PdDC-7HtqU" rel="nofollow" target="_blank"
-                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
-                                                    12</a></li>
-                                            <li><a href="https://www.youtube.com/watch?v=Rtze7olcF4I" rel="nofollow"
+                                                    11</a> , <a href="https://youtu.be/1PdDC-7HtqU" rel="nofollow"
                                                     target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    12</a> , <a href="https://www.youtube.com/watch?v=Rtze7olcF4I"
+                                                    rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     13</a></li>
                                             <li><a href="https://www.youtube.com/watch?v=PnwSqRvYRJo" rel="nofollow"
@@ -333,6 +328,21 @@
                                             <li><a href="https://youtu.be/p5kKGCUL1nY" rel="nofollow" target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     24 (Wordpress - Woocommerce)</a></li>
+                                            <li><a href="https://mega.nz/folder/BwlgiLxT#NISakmQHOi_i0AhEvsWRpg"
+                                                    rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    25 (Freelancing - Upwork)</a></li>
+                                            <li><a href="https://www.youtube.com/watch?v=1DaAiTmP-FM" rel="nofollow"
+                                                    target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    26 (Wordpress - Woocommerce)</a></li>
+                                            <li><a href="https://youtu.be/rY6tJGIiLZs" rel="nofollow" target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    27 (Wordpress - Site SEO)</a></li>
+                                            <li><a href="https://www.youtube.com/watch?v=X-mIFMVCdo0" rel="nofollow"
+                                                    target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    28 (Wordpress - Q/A Class)</a></li>
                                         </ul>
                                         </p>
                                     </div>
