Last Class VDO Updated

--- a/index.html
+++ b/index.html
@@ -343,6 +343,10 @@
                                                     target="_blank"
                                                     class="text-blue-600 dark:text-blue-500 hover:underline">Class
                                                     28 (Wordpress - Q/A Class)</a></li>
+                                            <li><a href="https://www.youtube.com/watch?v=Fdgowscvh_0" rel="nofollow"
+                                                    target="_blank"
+                                                    class="text-blue-600 dark:text-blue-500 hover:underline">Class
+                                                    29 (Last Class)</a></li>
                                         </ul>
                                         </p>
                                     </div>
